# Kaban

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  conftest.py  pyproject.toml  requirements.txt  testdb.db
app/: main.py  testdb.db
app/alembic/: env.py
app/core/: security.py
app/db/: create_db.py  db.py
app/models/: models.py
app/routes/: auth.py  board.py  ticket.py  user.py
app/schemes/: schemes.py
app/test/: test_auth.py  test_board.py  test_example.py  test_main.py  test_security.py  test_ticket.py  test_user.py  utils.py
