[project]
name = "capstone-project-kaban"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard,standart]>=0.124.2",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.38.0",
]
